samples/_failures_safe/1761393837_373608_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a940654d.c:164: error: expected ‘;’, ‘,’ or ‘)’ at end of input
